Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Fixed #1808 : Box rendered even if empty.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 